--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -12,3 +12,8 @@
   align-items: center;
   justify-content: center;
 }
+
+
+.headerBox{
+  background-color: var(--ifm-background-color)
+}
